Opened 18 years ago

Closed 16 years ago

#837 closed bug (fixed)

[app_server] crash in Desktop::Cursor()

Reported by: diver Owned by: stippi
Priority: blocker Milestone: R1/alpha1
Component: Servers/app_server Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

On real hw, while plaing around with SoundPlay, dunno how to reproduce yet.

Segment violation

Desktop::Cursor() Desktop::SetCursor() ServerApp::SetCurrentCursor() WindowsLayer::MouseMoved() MouseFilter::Filter() EventDispatcher::_EventLoop() EventDispatcher::_eventLooper()

Change History (9)

comment:1 by wkornewald, 18 years ago

Milestone: R1
Version: R1 development

comment:2 by axeld, 18 years ago

Priority: normalblocker

comment:3 by axeld, 17 years ago

Milestone: R1R1/alpha

comment:4 by nielx, 16 years ago

This ticket is a little bit vague for a nomination as blocker of the alpha 1 release. Diver, can you try to find a consistent method for reproduction?

comment:5 by diver, 16 years ago

I didnt' sow this crash for year now. I think its fixed.

comment:6 by axeld, 16 years ago

It hasn't been fixed yet, the code is still problematic. It only shows rarely, though (I remember running into it about two month ago the last time). Maybe it would be okay to move it to R1 instead, I dunno.

comment:7 by stippi, 16 years ago

I didn't see it either for a _long_ time, but yesterday I got a crash in HWInterface::_DrawCursor(), which I believe is originating from the same problem. I should write a test app which constantly changes the cursor shape, I think this is what triggers it, together with something else in the cursor code.

in reply to:  6 comment:8 by nielx, 16 years ago

Owner: changed from axeld to stippi

Replying to axeld:

It hasn't been fixed yet, the code is still problematic. It only shows rarely, though (I remember running into it about two month ago the last time). Maybe it would be okay to move it to R1 instead, I dunno.

Let's keep it here until we are at a later stage in the alpha 1 process, and then reevaluate. Anyway, assigning to stippi because he should write a test app :-)

comment:9 by stippi, 16 years ago

Resolution: fixed
Status: newclosed

Hopefully fixed in hrev24741. The bug was/is very hard to reproduce, so I cannot verify that the problem I saw was the indeed cause. Please reopen if you encounter it again.

Note: See TracTickets for help on using tickets.